--- a/src/server/resources/index.html
+++ b/src/server/resources/index.html
@@ -5,7 +5,7 @@
 		<title>My React App</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root">AAAAA</div>
 	</body>
 	<script>
 		let exports = {};
