--- a/src/server/resources/index.html
+++ b/src/server/resources/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>My React App</title>
+		<style>
+			html,
+			body {
+				margin: 0;
+				padding: 0;
+			}
+		</style>
+
+		<title>Scientific Instrument Logbook</title>
 	</head>
 	<body>
-		<div id="root">AAAAA</div>
+		<div id="root"></div>
 	</body>
 	<script>
 		let exports = {};
