--- a/src/server/resources/index.html
+++ b/src/server/resources/index.html
@@ -9,10 +9,11 @@
 				padding: 0;
 			}
 		</style>
+		<link rel="stylesheet" href="/fonts.css" />
 
 		<title>Scientific Instrument Logbook</title>
 	</head>
-	<body>
+	<body style="font-family: Inter, sans-serif;">
 		<div id="root"></div>
 	</body>
 	<script>
