--- a/src/server/resources/index.html
+++ b/src/server/resources/index.html
@@ -13,9 +13,10 @@
 
 		<title>Scientific Instrument Logbook</title>
 	</head>
-	<body style="font-family: Inter, sans-serif;">
+	<body style="font-family: Inter, sans-serif">
 		<div id="root"></div>
 	</body>
+
 	<script>
 		let exports = {};
 	</script>
