--- a/src/server/resources/index.html
+++ b/src/server/resources/index.html
@@ -8,6 +8,11 @@
 				margin: 0;
 				padding: 0;
 			}
+			@media print {
+				.no-print {
+					display: none !important; /* hides this in print */
+				}
+			}
 		</style>
 		<link rel="stylesheet" href="/fonts.css" />
 
