--- a/src/server/resources/index.html
+++ b/src/server/resources/index.html
@@ -14,7 +14,7 @@
 				}
 			}
 		</style>
-		<link rel="stylesheet" href="/fonts.css" />
+		<link rel="stylesheet" href="/resources/fonts.css" />
 
 		<title>Scientific Instrument Logbook</title>
 	</head>
