--- a/src/server/resources/login.html
+++ b/src/server/resources/login.html
@@ -99,7 +99,7 @@
     <div class="login-container">
         <img src="/resources/logo.png" width="250px"/>
         <h2>Login</h2>
-        <p>Please input your UCAMS id and password to access Scientific.</p>
+        <p>Please input your UCAMS id and password to access Scientific Instrument Logbook.</p>
         <form id="loginForm" class="login-form">
             <input type="text" id="username" spellcheck="false" class="input-field" placeholder="UCAMS id" required>
             <input type="password" id="password" spellcheck="false"  class="input-field" placeholder="Password" required>
